correcao arquivo heroku

--- a/src/main/resources/heroku.properties
+++ b/src/main/resources/heroku.properties
@@ -1,9 +1,13 @@
 spring.jpa.show-sql=true
-spring.datasource.url=jdbc:mysql://localhost:3306/projeto2
+spring.datasource.url=${CLEARDB_DATABASE_URL}
+spring.datasource.maxActive=10
+spring.datasource.maxIdle=5
+spring.datasource.minIdle=2
+spring.datasource.initialSize=5
+spring.datasource.removeAbandoned=true
 spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.data.rest.base-path=/api
 spring.thymeleaf.cache=false
 spring.hateoas.use-hal-as-default-json-media-type=false
 management.security.enabled=false
-
