--- a/src/main/resources/heroku.properties
+++ b/src/main/resources/heroku.properties
@@ -5,7 +5,8 @@ spring.datasource.maxIdle=5
 spring.datasource.minIdle=2
 spring.datasource.initialSize=5
 spring.datasource.removeAbandoned=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.generate-ddl=true
 
 spring.data.rest.base-path=/api
 spring.thymeleaf.cache=false
