--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -1,5 +1,7 @@
 spring.jpa.show-sql=true
 spring.datasource.url=jdbc:mysql://localhost:3306/projeto2
+spring.datasource.username=bob
+spring.datasource.password=bob
 spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.data.rest.base-path=/api
