--- a/src/main/resources/heroku.properties
+++ b/src/main/resources/heroku.properties
@@ -4,9 +4,7 @@ spring.datasource.maxActive=10
 spring.datasource.maxIdle=5
 spring.datasource.minIdle=2
 spring.datasource.initialSize=5
-spring.datasource.removeAbandoned=true
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.data.rest.base-path=/api
 spring.thymeleaf.cache=false
