--- a/src/main/resources/heroku.properties
+++ b/src/main/resources/heroku.properties
@@ -1,7 +1,8 @@
-#heroku
 spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
 spring.datasource.url=${CLEARDB_DATABASE_URL}
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 spring.data.rest.base-path=/api
 spring.thymeleaf.cache=false
