--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -1,7 +1,7 @@
 spring.jpa.show-sql=true
-spring.datasource.url=jdbc:mysql://localhost:3306/projeto2
-spring.datasource.username=bob
-spring.datasource.password=bob
+spring.datasource.url=jdbc:mysql://us-cdbr-iron-east-05.cleardb.net/heroku_45e58bc9c04bf0c
+spring.datasource.username=b9b4592eeac49a
+spring.datasource.password=2d80bf2a
 spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.data.rest.base-path=/api
