--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -2,7 +2,7 @@ spring.jpa.show-sql=true
 spring.datasource.url=jdbc:mysql://us-cdbr-iron-east-05.cleardb.net/heroku_45e58bc9c04bf0c
 spring.datasource.username=b9b4592eeac49a
 spring.datasource.password=2d80bf2a
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
 spring.data.rest.base-path=/api
 spring.thymeleaf.cache=false
