--- a/src/main/resources/heroku.properties
+++ b/src/main/resources/heroku.properties
@@ -1,3 +1,4 @@
+#heroku nao cria tabelas
 spring.jpa.show-sql=true
 spring.datasource.url=${CLEARDB_DATABASE_URL}
 spring.jpa.hibernate.ddl-auto=update
